...

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="create_event_previous_button_desc">Go to previous page of create mEvent</string>
    <string name="eventsMenu">events</string>
    <string name="friendsMenu">friends</string>
    <string name="profileMenu">profile</string>
    <string name="antl">Antl.</string>
    <string name="save">save</string>
    <string name="button_to_remove_a_date_to_the_event">button to remove a date to the mEvent</string>
    <string name="click_the_button_to_add_a_date">Add a date</string>
    <string name="insert_a_date">Insert A Date</string>
    <string name="logout">Logout</string>
    <string name="friend_code_input_label">Please enter friend code</string>
    <string name="friendcode">FriendCode</string>
    <string name="your_friend_code_label">Your friend code:</string>

    <string name="error_code_login">Unable to login, please try again</string>
</resources>
...
